--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -113,7 +113,7 @@ h3,
     background-color: #faebd7; /* Beige */
     border: 1px solid #e0c090;
     border-radius: 15px;
-    color: #333;
+    color: white;
 }
 
 /* 8. Step Icons */
